@@ -5,6 +5,9 @@ cupt (2.10.1~) UNRELEASED; urgency=medium
       Increased hang-check timeout from 30s to 90s, giving more time to
       HPPA buildds. Thanks to John David Anglin for the investigation and
       Aaron M. Ucko for the report. (Closes: #882238)
+  * lib:
+    - system/resolver:
+      - New class 'ImplicitReason'.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Mar 2018 20:08:30 +0200
 
